[images] - uploading images

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel": "^6.23.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "isomorphic-fetch": "^2.2.1",
