[Image Share] - Ui Changes and addind css

--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
     "startServer": "nodemon ./server/index.js"
   },
   "dependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "axios": "^0.18.0",
     "babel": "^6.23.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "css-loader": "^2.1.0",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
+    "json-loader": "^0.5.7",
     "loader": "^2.1.1",
     "mongoose": "^5.2.4",
     "morgan": "^1.9.1",
     "nodemailer": "^4.6.7",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.2",
+    "raw-loader": "^1.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-js-pagination": "^3.0.2",
@@ -33,6 +38,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack-cli": "^3.0.8"
   },
   "devDependencies": {
